--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/STM32-base-STM32Cube"]
 	path = lib/stm32cube
 	url = https://github.com/STM32-base/STM32-base-STM32Cube
+[submodule "tools"]
+	path = tools
+	url = https://github.com/ryanplusplus/arm-none-eabi-gcc-tools
