--- a/openocd/blue-pill/upload.cfg
+++ b/openocd/blue-pill/upload.cfg
@@ -1,3 +1,3 @@
 source [find interface/stlink.cfg]
 source [find target/stm32f1x.cfg]
-program build/blue-pill/tiny.hex verify reset exit
+program build/blue-pill/blue-pill.hex verify reset exit
