--- a/openocd/black-g030/erase.cfg
+++ b/openocd/black-g030/erase.cfg
@@ -3,4 +3,7 @@ transport select hla_swd
 
 source [find target/stm32g0x.cfg]
 
-program build/nucleo-g031k8/nucleo-g031k8.hex verify reset exit
+init
+reset halt
+stm32l4x mass_erase 0
+exit
